gcc/ChangeLog.tree-ssa:
	* Makefile.in (tree-mudflap.o): Add dependency on $(TREE_DUMP_H).
	* c-decl.c (c_expand_body_1): Don't call simplify_function_tree
	after mudflap_c_function.
	Move mudflap instrumentation after SSA optimizers.
	* tree-dump.c (dump_files): Add entry for -fdump-tree-mudflap.
	* tree.h (enum tree_dump_index): Add TDI_mudflap.
	* doc/invoke.texi: Document -fdump-tree-mudflap.
	* tree-mudflap.c: Include tree-dump.h.
	(dump_file): New local variable.
	(dump_flags): New local variable.
	(mudflap_c_function): Call dump_begin, dump_end and dump_function.
	(mf_decl_cache_locals): Set DECL_CONTEXT for __mf_lookup_shift_l
	and __mf_lookup_mask_l to current_function_decl.
	(mf_offset_expr_of_array_ref): Likewise for __mf_index_X.
	(mf_build_check_statement_for): Re-implement to emit a proper
	STMT_EXPR.
	(mx_xfn_indirect_ref): Emit detailed debugging info if
	-fdump-tree-mudflap-details is given.
	(mudflap_enqueue_decl): Likewise
	* tree-optimize.c (optimize_function_tree): Don't check for
	-fmudflap.


libmudflap/ChangeLog:

	* testsuite/libmudflap.c/fail1-frag.c: Add volatile
	modifiers to prevent being optimized away.
	* testsuite/libmudflap.c/fail10-frag.c: Likewise.
	* testsuite/libmudflap.c/fail13-frag.c: Likewise.
	* testsuite/libmudflap.c/fail14-frag.c: Likewise.
	* testsuite/libmudflap.c/fail15-frag.c: Likewise.
	* testsuite/libmudflap.c/fail2-frag.c: Likewise.
	* testsuite/libmudflap.c/fail20-frag.c: Likewise.
	* testsuite/libmudflap.c/fail3-frag.c: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@66146 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -254,7 +254,7 @@ in the following sections.
 -fdump-tree-cfg -fdump-tree-dot @gol
 -fdump-tree-ssa@r{[}-@var{n}@r{]} -fdump-tree-pre@r{[}-@var{n}@r{]} @gol
 -fdump-tree-ccp@r{[}-@var{n}@r{]} -fdump-tree-dce@r{[}-@var{n}@r{]} @gol
--fdump-tree-simple@r{[}-raw@r{]} @gol
+-fdump-tree-simple@r{[}-raw@r{]} -fdump-tree-mudflap@r{[}-@var{n}@r{]} @gol
 -fmem-report @gol
 -feliminate-dwarf2-dups  -fmem-report @gol
 -fprofile-arcs  -fsched-verbose=@var{n} @gol
@@ -3384,8 +3384,13 @@ appending @file{.copyprop} to the source file name.
 
 @item dce
 @opindex fdump-tree-dce
-Dump each function before and after DCE.  The file name is made by appending
-@file{.dce} to the source file name.
+Dump each function after dead code elimination.  The file name is made by
+appending @file{.dce} to the source file name.
+
+@item mudflap
+@opindex fdump-tree-mudflap
+Dump each function after adding mudflap instrumentation.  The file name is
+made by appending @file{.mudflap} to the source file name.
 
 @item all
 @opindex fdump-tree-all
