* config/i386/i386.c (x86_64_sign_extended_value): Don't allow 	tls_symbolic_operand. 	(x86_64_zero_extended_value): Likewise.
	* gcc.dg/tls/opt-6.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@66158 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/tls/opt-6.c: New test.
+
 2003-04-22  Release Manager
 
 	* GCC 3.2.3 Released.
