2003-03-22  Alan Modra  <amodra@bigpond.net.au>
	* combine.c (simplify_comparison <AND>): Use gen_int_mode.  Tidy.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@66160 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-22  Alan Modra  <amodra@bigpond.net.au>
+
+	* combine.c (simplify_comparison <AND>): Use gen_int_mode.  Tidy.
+
 2002-09-19 Dale Johannesen <dalej@apple.com>
 
 	* rtl.h: Add NOTE_PRECONDITIONED.
