--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-26  Alan Modra  <amodra@bigpond.net.au>
+
+	PR target/9681
+	* tlink.c (scan_linker_output): Drop leading '.' from symbol names.
+
 2003-03-22  Alan Modra  <amodra@bigpond.net.au>
 
 	* combine.c (simplify_comparison <AND>): Use gen_int_mode.  Tidy.
