2003-04-25  Alan Modra  <amodra@bigpond.net.au> 	    Jakub Jelinek  <jakub@redhat.com>
	* config/rs6000/rs6000.c (rs6000_legitimize_address,
	rs6000_emit_move): Handle -maddr32.
	(rs6000_stack_info): Handle -msafe-stack and -mprofile-kernel.
	(rs6000_emit_prologue, rs6000_emit_epilogue): Handle -msafe-stack.
	(output_function_profiler): Handle -mprofile-kernel.
	* config/rs6000/linux64.h (BI_ARCH_OVERRIDE_OPTIONS,
	MASK_SAFE_STACK, MASK_ADDR32, MASK_PROFILE_KERNEL): Define.
	(TARGET_SAFE_STACK, TARGET_ADDR32, TARGET_PROFILE_KERNEL,
	EXTRA_SUBTARGET_SWITCHES, SUBSUBTARGET_OVERRIDE_OPTIONS): Redefine.
	(PROFILE_HOOK): Don't call output_profile_hook if
	TARGET_PROFILE_KERNEL.
	(ASM_OUTPUT_SPECIAL_POOL_ENTRY_P): Handle -maddr32.
	* config/rs6000/rs6000.h (TARGET_ADDR32, TARGET_SAFE_STACK,
	TARGET_PROFILE_KERNEL): Define.
	(LEGITIMATE_LO_SUM_ADDRESS_P): Handle -maddr32.
	* config/rs6000/rs6000.md (elf_high, elf_low): Allow even if
	TARGET_ADDR32.
	(elf_high64, elf_low64): New insns.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@66165 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,25 @@
+2003-04-25  Alan Modra  <amodra@bigpond.net.au>
+	    Jakub Jelinek  <jakub@redhat.com>
+
+	* config/rs6000/rs6000.c (rs6000_legitimize_address,
+	rs6000_emit_move): Handle -maddr32.
+	(rs6000_stack_info): Handle -msafe-stack and -mprofile-kernel.
+	(rs6000_emit_prologue, rs6000_emit_epilogue): Handle -msafe-stack.
+	(output_function_profiler): Handle -mprofile-kernel.
+	* config/rs6000/linux64.h (BI_ARCH_OVERRIDE_OPTIONS,
+	MASK_SAFE_STACK, MASK_ADDR32, MASK_PROFILE_KERNEL): Define.
+	(TARGET_SAFE_STACK, TARGET_ADDR32, TARGET_PROFILE_KERNEL,
+	EXTRA_SUBTARGET_SWITCHES, SUBSUBTARGET_OVERRIDE_OPTIONS): Redefine.
+	(PROFILE_HOOK): Don't call output_profile_hook if
+	TARGET_PROFILE_KERNEL.
+	(ASM_OUTPUT_SPECIAL_POOL_ENTRY_P): Handle -maddr32.
+	* config/rs6000/rs6000.h (TARGET_ADDR32, TARGET_SAFE_STACK,
+	TARGET_PROFILE_KERNEL): Define.
+	(LEGITIMATE_LO_SUM_ADDRESS_P): Handle -maddr32.
+	* config/rs6000/rs6000.md (elf_high, elf_low): Allow even if
+	TARGET_ADDR32.
+	(elf_high64, elf_low64): New insns.
+
 2002-12-25  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/rs6000.c (rs6000_override_options): Convert to
