--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2003-04-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* builtins.def (BUILT_IN_BCOPY, BUILT_IN_MEMMOVE): New.
+	* builtin-types.def (BT_FN_VOID_CONST_PTR_PTR_SIZE): New.
+	* builtins.c (expand_builtin_memmove, expand_builtin_bcopy): New
+	functions.
+	(expand_builtin): Handle BUILT_IN_BCOPY and BUILT_IN_MEMMOVE.
+
 2002-07-26  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/rs6000/rs6000.md: Enable patterns using rlwinm for
