--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/string-opt-19.c: New test.
+
 2003-04-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/tls/opt-6.c: New test.
