* jump.c (never_reached_warning): Really stop looking if we reach         the beginning of the function.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-branch@66250 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-29  Jason Merrill  <jason@redhat.com>
+
+	PR middle-end/10336
+	* jump.c (never_reached_warning): Really stop looking if we reach 
+	the beginning of the function.
+
 2003-04-22  Release Manager
 
 	* GCC 3.2.3 Released.
