2003-05-02  Frank Ch. Eigler  <fche@redhat.com>
	* testsuite/libmudflap.c/fail27-frag.c: Add more volatile flags.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@66394 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libmudflap/ChangeLog
+++ b/libmudflap/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-02  Frank Ch. Eigler  <fche@redhat.com>
+
+	* testsuite/libmudflap.c/fail27-frag.c: Add more volatile flags.
+
 2002-04-28  Frank Ch. Eigler  <fche@redhat.com>
 
 	* Makefile.am (HOOKOBJS): Add *time related hooks.
