--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-06  Richard Henderson  <rth@redhat.com>
+
+        * unwind-dw2.c (uw_update_context_1): Only set cfa as sp if 
+        previous frame didn't save sp.  Clear sp for next frame.
+        (uw_install_context_1): Honor saved sp from frame.
+
 2003-05-03  Richard Henderson  <rth@redhat.com>
 
         * builtins.c (expand_builtin) <BUILT_IN_DWARF_FP_REGNUM>: Remove.
