libiberty/         * hashtab.c (burtle_hash): New fn.         * configure.in: Add AC_C_BIGENDIAN_CROSS.         * aclocal.m4: Include accross.m4.         * configure, config.in: Regenerate. include/         * hashtab.h (burtle_hash): Prototype.         (burtle_hash_object): New macro.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@66566 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,10 @@
+2003-05-07  Jason Merrill  <jason@redhat.com>
+
+	* hashtab.c (burtle_hash): New fn.
+	* configure.in: Add AC_C_BIGENDIAN_CROSS.
+	* aclocal.m4: Include accross.m4.
+	* configure, config.in: Regenerate.
+
 2003-05-03  Carlo Wood  <carlo@alinoe.com>
 
 	* cp-demangle.c: Fix typo in "char_traints" string-literal.
