--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-07  Aldy Hernandez  <aldyh@redhat.com>
+
+        * gcc.dg/200305051.c: Fix triplet.
+
 2003-04-21  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/9881
