--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-08  Jason Merrill  <jason@redhat.com>
+
+	* init.c (build_new_1): Don't reuse a TARGET_EXPR in an
+	expression.  Undo some of the recent reorg.
+
 2003-05-07  Jason Merrill  <jason@redhat.com>
 
 	* call.c (build_conditional_expr): Don't assume that the folded
