* Makefile.in (regmove.o-warn): Change to -Wno-error.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@66837 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-15  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* Makefile.in (regmove.o-warn): Change to -Wno-error.
+
 2003-05-13  Jason Merrill  <jason@redhat.com>
 
 	* tree.h (STRIP_MAIN_TYPE_NOPS): New macro.
