* treegen.cc (generate): Clear DECL_EXTERNAL. 	* tree.cc (visit_method): Clear DECL_EXTERNAL. 	(build_jni_stub): Don't bother setting DECL_EXTERNAL. 	* builtins.cc (add): Always set DECL_EXTERNAL.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcjx-branch@98860 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,10 @@
+2005-04-26  Tom Tromey  <tromey@redhat.com>
+
+	* treegen.cc (generate): Clear DECL_EXTERNAL.
+	* tree.cc (visit_method): Clear DECL_EXTERNAL.
+	(build_jni_stub): Don't bother setting DECL_EXTERNAL.
+	* builtins.cc (add): Always set DECL_EXTERNAL.
+
 2005-04-18  Tom Tromey  <tromey@redhat.com>
 
 	* tree.cc (build_jni_stub): Make a block and link it into the
