* aot/mangle.cc (update): Create separate entry for pointer type. 	(update_array): Likewise. 	(update): Emit pending characters at end if needed.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcjx-branch@98864 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcjx/ChangeLog
+++ b/gcjx/ChangeLog
@@ -1,3 +1,9 @@
+2005-04-26  Tom Tromey  <tromey@redhat.com>
+
+	* aot/mangle.cc (update): Create separate entry for pointer type.
+	(update_array): Likewise.
+	(update): Emit pending characters at end if needed.
+
 2005-04-18  Tom Tromey  <tromey@redhat.com>
 
 	* header/jni.cc (write_field): Actually emit #define.
