--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,12 @@
+2005-04-27  Tom Tromey  <tromey@redhat.com>
+
+	* java/lang/natClassLoader.cc (_Jv_RegisterClassHookDefault):
+	Handle 'next' as version number.
+
+2005-04-12  Aaron Luchko  <aluchko@redhat.com>
+
+	* gnu/gcj/tools/gcj_dbtool/Main.java (addJar): Make 'length' an int.
+
 2005-04-02  Tom Tromey  <tromey@redhat.com>
 
 	* Makefile.in, configure: Rebuilt.
