--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -4553,26 +4553,21 @@ These flags may change in the future. You cannot override any of these options i
 To build shared libraries with @option{-fast}, specify @option{-fPIC} on command line. 
 
 @gccoptlist{-O3
--fgcse-sm
--funroll-loops
--fstrict-aliasing
--fsched-interblock
+-falign-loops-max-skip=15
+-falign-jumps-max-skip=15
 -falign-loops=16
 -falign-jumps=16
 -falign-functions=16
--falign-jumps-max-skip=15
--falign-loops-max-skip=15
--malign-natural
+-malign-natural (except when -fastf is speified)
 -ffast-math
--freorder-blocks
--freorder-blocks-and-partition
--finline-floor
--mdynamic-no-pic
--mpowerpc-gpopt
--force_cpusubtype_ALL
--fstrict-aliasing
--mtune=G5
+-funroll-loops
+-ftree-loop-linear
+-ftree-loop-memset
 -mcpu=G5
+-mpowerpc-gpopt
+-mtune=G5  (unless -mtune=G4 is specified).
+-fsched-interblock
+-fgcse-sm
 -mpowerpc64}
 
 Important notes: @option{-ffast-math} results in code that is not necessarily 
