* java/lang/natClassLoader.cc (_Jv_RegisterClassHookDefault): 	Remove redundant update.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcjx-branch@98971 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,6 +1,11 @@
 2005-04-27  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/natClassLoader.cc (_Jv_RegisterClassHookDefault):
+	Remove redundant update.
+
+2005-04-27  Tom Tromey  <tromey@redhat.com>
+
+	* java/lang/natClassLoader.cc (_Jv_RegisterClassHookDefault):
 	Handle 'next' as version number.
 
 2005-04-12  Aaron Luchko  <aluchko@redhat.com>
