* lower.cc (visit_bytecode_block) <op_checkcast>: Correctly handle 	_Jv_CheckCast. 	* tree.cc (visit_cast): Correctly handle _Jv_CheckCast.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcjx-branch@98974 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,5 +1,11 @@
 2005-04-28  Tom Tromey  <tromey@redhat.com>
 
+	* lower.cc (visit_bytecode_block) <op_checkcast>: Correctly handle
+	_Jv_CheckCast.
+	* tree.cc (visit_cast): Correctly handle _Jv_CheckCast.
+
+2005-04-28  Tom Tromey  <tromey@redhat.com>
+
 	* glue.hh: Include rtl.h.
 	* classobj.cc (create_class_instance): Call make_decl_rtl.  Don't
 	take address of result.
