* gcc.dg/20021029-1.c: For sh64*-*-*, add -mpt-fixed.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/sh-elf-4_1-branch@99014 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-29  J"orn Rennecke <joern.rennecke@st.com>
+
+	* gcc.dg/20021029-1.c: For sh64*-*-*, add -mpt-fixed.
+
 2005-04-05  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
 
 	PR libfortran/20755
