* jump.c: Merge from mainline version 1.260.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/sh-elf-4_1-branch@99015 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-29  J"orn Rennecke <joern.rennecke@st.com>
+
+	* jump.c: Merge from mainline version 1.260.
+
 2005-04-12  J"orn Rennecke <joern.rennecke@st.com>
 
 	PR rtl-optimization/20969:
