--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2006-03-20  Jason Merrill  <jason@redhat.com>
+
+	PR c++/21764
+	* c-pragma.c (visstack): Move out of handle_pragma_visibility.
+	(push_visibility, pop_visibility): Likewise.
+	* c-pragma.h: Declare them.
+
 2006-08-21  Mark Shinwell  <shinwell@codesourcery.com>
 
 	* config/arm/pr-support.c (__gnu_unwind_execute): Insert " + 1" in
